export type LicenseDetail = {
  licenseId: string;
  name: string;
  licenseText: string;
  standardLicenseTemplate?: string;
  standardLicenseHeader?: string;
  standardLicenseHeaderTemplate?: string;
};
