export type LicenseIndexEntry = {
  licenseId: string;
  name: string;
};
